--- a/app/src/main/res/layout/activity_game_mode.xml
+++ b/app/src/main/res/layout/activity_game_mode.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.hslu.mobpro.proj.thinkquick.GameModeActivity">
+    tools:context="ch.hslu.mobpro.proj.thinkquick.activities.GameModeActivity">
 
     <Button
         android:id="@+id/endlessButton"
