--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -5,7 +5,7 @@
     android:id="@+id/gameOverLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.hslu.mobpro.proj.thinkquick.GameOverActivity">
+    tools:context="ch.hslu.mobpro.proj.thinkquick.activities.GameOverActivity">
 
     <TextView
         android:id="@+id/gameOver"
