--- a/app/src/main/res/layout-land/activity_game_mode.xml
+++ b/app/src/main/res/layout-land/activity_game_mode.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
+        android:onClick="onEndlessButtonClick"
         android:text="@string/game_mode_btn_endless"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -38,6 +39,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
+        android:onClick="onHardcoreButtonClick"
         android:text="@string/game_mode_btn_hardcore"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -59,6 +61,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
+        android:onClick="onSurpriseButtonClick"
         android:text="@string/game_mode_btn_surprise"
         android:textColor="@android:color/white"
         android:textSize="24sp"
