--- a/app/src/main/res/layout-land/activity_game_mode.xml
+++ b/app/src/main/res/layout-land/activity_game_mode.xml
@@ -72,4 +72,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
+    <TextView
+        android:id="@+id/gameModeTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Game Mode"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="64sp"
+        app:layout_constraintBottom_toTopOf="@+id/endlessButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
