--- a/app/src/main/res/layout-land/activity_points_distribution.xml
+++ b/app/src/main/res/layout-land/activity_points_distribution.xml
@@ -48,13 +48,11 @@
 
     <CheckBox
         android:id="@+id/checkBoxTutorial"
-        android:layout_width="368dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/distribution_check_tutorial"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -106,12 +104,10 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/pointsGraph"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
