--- a/app/src/main/res/layout/activity_points_distribution.xml
+++ b/app/src/main/res/layout/activity_points_distribution.xml
@@ -103,7 +103,7 @@
 
     <CheckBox
         android:id="@+id/deleteAllContent"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
