Surprise mode deactivated.

--- a/app/src/main/res/layout/activity_game_mode.xml
+++ b/app/src/main/res/layout/activity_game_mode.xml
@@ -43,14 +43,14 @@
         android:text="@string/game_mode_btn_hardcore"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/surpriseButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <Button
+    <!--<Button
         android:id="@+id/surpriseButton"
         android:layout_width="0dp"
         android:layout_height="75dp"
@@ -70,7 +70,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0" />-->
 
     <TextView
         android:id="@+id/gameModeTitle"
